# macro_fractal

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  manage.py  requirements.txt
backend/macro_fractal/: asgi.py  settings.py  urls.py  wsgi.py
calculator/: CMakeLists.txt  Dockerfile  base_calculator.cpp  base_calculator.h  build_and_run.sh  calc_params.h  main.cpp  mandelbrot_calculator.h
calculator/executors/: mandelbrot_calculator.cpp  mandelbrot_calculator.h
